--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,6 +4,12 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
+    [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": "node update-manifest-version.js ${nextRelease.version}"
+      }
+    ],
     "@semantic-release/git"
   ]
 }
