--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -1,33 +1,32 @@
-name: Update Version
+name: Auto Update Version
 
 on:
   push:
     branches:
-      - main  # Trigger on pushes to the main branch
+      - main
 
 jobs:
   update-version:
-    runs-on: ubuntu-latest  # Use an Ubuntu runner
+    runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Step 2: Set up Node.js
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          node-version: '16'  # Use Node.js 16
+          token: ${{ secrets.GH_PAT }} # Use PAT instead of default token
 
-      # Step 3: Run the version update script
-      - name: Update version in manifest.json
-        run: node updateVersion.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
 
-      # Step 4: Commit the updated manifest.json
-      - name: Commit changes
+      - name: Run version update script
+        run: |
+          node update-manifest-version.js
+          git add manifest.json
+          git commit -m "Automated version update"
+
+      - name: Push changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add manifest.json
-          git commit -m "Automated version update"
-          git push
+          git push origin main
